# Projectkronos

./: .gitignore  Cargo.toml  README.md  bin.minutemedusa.WORKINGPERFECTLY.rs  bin.parabaola-db.rs.working.MAINBODIES  build.rs  config.rs  gitbackup.sh  house_verification.txt  houses.kernel  main.rsperfect.hourly  medusa_impactor.sh  swetamer.sh  wrapper.h  zenith.kernel  zenith.kernel.allplanetslilithandnodesverified  zenith.kernel.fullyverified  zenith.kernel.noTZ  zenith.kernel.no_ayanamsas  zenith.minute  zenith.minute.kernel
src/: bin.expand.rs  bin.livebenchmark.rs  bin.medusaTZ  bin.medusajpl.rs  bin.medusaseconds.rs  bin.minutemedusa.rs  bin.parabola-db.rs  bin.search.rs  bin.verify.rs  bin.verify_ultimate  bindings.rs  lib.rs  main.rs  zenith.kernel
